@@ -2,6 +2,7 @@
                              Kiji Express Release Notes
 
 Version 0.15.0
+  * EXP-394. Provide groupByQualifier function for Seq[FlowCell[_]].
   * EXP-355. Added Express key-value stores.
   * EXP-388. Use buffered writer for direct kiji output.
   * EXP-350. Support multiple HFile output taps in a single flow.
